# yadi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.py  conanfile.py  conanfile.txt  doxyfile
.travis/: install.sh  run.sh
docs/: _r_e_a_d_m_e_8md_source.html  annotated.html  classes.html  create__specializations_8cpp_source.html  create__specializations_8hpp_source.html  create__utils_8cpp_source.html  create__utils_8hpp_source.html  demangle_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e9d3eaf8625ed7b22bddef24677dac8d.html  dir_fe8521842de666a44c07cd776d23b324.html  factory_8cpp_source.html  factory_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  help_8cpp_source.html  help_8hpp_source.html  hierarchy.html  index.html  initializers_8cpp_source.html  initializers_8hpp_source.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaceyadi.html  registration_8cpp_source.html  registration_8hpp_source.html  structyadi_1_1adapter-members.html  structyadi_1_1adapter.html  structyadi_1_1details_1_1ctr__helper.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01false_01_4-members.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01false_01_4.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01true_01_4-members.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01true_01_4.html  structyadi_1_1details_1_1function__call__via__yaml-members.html  structyadi_1_1details_1_1function__call__via__yaml.html  (+42 more)
docs/html/: annotated.html  classes.html  create__specializations_8hpp_source.html  create__utils_8hpp_source.html  demangle_8hpp_source.html  factory_8hpp_source.html  files.html  functions_vars.html  help_8hpp_source.html  hierarchy.html  index.html  initializers_8hpp_source.html  namespacemembers.html  namespaceyadi.html  registration_8hpp_source.html  structyadi_1_1adapter.html  structyadi_1_1details_1_1ctr__helper.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01false_01_4.html  structyadi_1_1details_1_1ctr__helper_3_01_b_t_00_01_i_t_00_01true_01_4.html  structyadi_1_1details_1_1function__call__via__yaml.html  structyadi_1_1details_1_1function__traits.html  structyadi_1_1details_1_1function__traits_3_01_r_07_5_08_07_args_8_8_8_08_4.html  structyadi_1_1details_1_1function__traits_3_01std_1_1function_3_01_r_07_args_8_8_8_08_4_01_4.html  structyadi_1_1details_1_1init__no__arg__helper.html  structyadi_1_1details_1_1init__no__arg__helper_3_01_b_t_00_01_i_t_00_01false_01_4.html  structyadi_1_1details_1_1init__no__arg__helper_3_01_b_t_00_01_i_t_00_01true_01_4-members.html  structyadi_1_1details_1_1init__no__arg__helper_3_01_b_t_00_01_i_t_00_01true_01_4.html  structyadi_1_1details_1_1init__yaml__helper.html  structyadi_1_1details_1_1init__yaml__helper_3_01_b_t_00_01_i_t_00_01false_01_4-members.html  structyadi_1_1details_1_1init__yaml__helper_3_01_b_t_00_01_i_t_00_01false_01_4.html  structyadi_1_1details_1_1init__yaml__helper_3_01_b_t_00_01_i_t_00_01true_01_4.html  structyadi_1_1details_1_1yadi__help__fetcher.html  structyadi_1_1details_1_1yadi__help__fetcher_1_1concept-members.html  structyadi_1_1details_1_1yadi__help__fetcher_1_1concept.html  structyadi_1_1details_1_1yadi__help__fetcher_1_1model.html  structyadi_1_1details_1_1yaml__to__tuple-members.html  structyadi_1_1details_1_1yaml__to__tuple.html  structyadi_1_1factory.html  (+11 more)
docs/latex/: annotated.tex  index.tex  (+39 more)
inspector/: main.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+82 files in other folders)
